--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Hugo Portfolio Theme # Website name
+title: Alys Young's research Website # Website name
 baseURL: 'https://example.com/' # Website URL
 
 ############################
@@ -14,9 +14,9 @@ cascade:
   # Blog post options
   - _target:
       path: /post/**
-    editable: true
-    reading_time: true
-    commentable: true
+    editable: false
+    reading_time: false
+    commentable: false
     show_related: true
     show_breadcrumb: true
 
@@ -55,7 +55,7 @@ permalinks:
   categories: '/category/:slug/'
 disableAliases: true
 outputs:
-  home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
+  home: [HTML, RSS, JSON, headers, redirects]
   section: [HTML, RSS]
 imaging:
   resampleFilter: lanczos
