--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,10 +6,10 @@
 # Appearance
 
 appearance:
-  theme_day: custom
-  theme_night: custom
-  font: minimal
-  font_size: L
+  theme_day: Ocean
+  theme_night: Ocean
+  font: Rose
+  font_size: M
 
 # SEO
 
